README.md hidden

--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,67 @@
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+html, body {
+    margin: 0;
+    /*padding: 10px;*/
+}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 10px;
+}
+
+.nav-logo {
+    pointer-events: none;
+    width: 50px;
+}
+
+@media (prefers-reduced-motion: no-preference) {
+    .nav-logo {
+        animation: App-logo-spin infinite 20s linear;
+    }
+}
+
+.nav-items {
+    list-style: none;
+    display: flex;
+    padding-left: 30px;
+    padding-right: 30px;
+}
+
+.nav-items > li {
+    padding: 10px;
+}
+
+.nav-header {
+    -webkit-box-shadow: 0 5px 6px -6px black;
+    -moz-box-shadow: 0 5px 6px -6px black;
+    box-shadow: 0 5px 6px -6px black;
+}
+
+.app-footer {
+    background: lightgrey;
+    text-align: center;
 }
