--- a/src/css/index.css
+++ b/src/css/index.css
@@ -30,8 +30,9 @@ html, body {
 main {
     padding: 57px 27px;
     color: white;
-    background-image: url("../images/logo.svg");
+    background-image: url("../images/react-icon-large.png");
     background-repeat: no-repeat;
+    background-position: right 75%;
 }
 
 .main--title {
@@ -71,12 +72,14 @@ main {
     margin-right: auto;
     color: #61DAFB;
     font-weight: 700;
-    font-size: 22px;
+    font-size: 24px;
 }
 
 .navbar > h4 {
     color: #DEEBF8;
     font-weight: 600;
+    font-size: 18px;
+
 }
 
 .navbar > img {
